<resources>
    <string name="app_name">fitnessapp_fyp</string>
    <!-- Strings used for fragments for navigation -->

    <string name="title_home">Home</string>
    <string name="title_drills">Drills</string>
    <string name="title_activity">Activity</string>
    <string name="title_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="handles">HANDLES</string>
    <string name="days_21">Days 21</string>
    <string name="start_now">START NOW</string>
    <string name="daily">DAILY</string>
    <string name="shooting">SHOOTING</string>
    <string name="_2_hours">2 hours</string>
    <string name="passing">PASSING</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>