<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=" com.example.fitnessapp_fyp.drill2">







    <ScrollView


        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none">

        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/backgcrop"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="200.0dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:onClick="handles"
                    android:orientation="horizontal">

                    <LinearLayout

                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="monospace"
                            android:padding="5.0dp"
                            android:text="@string/handles"
                            android:textColor="#FFF"
                            android:textSize="42dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:padding="5.0dp"
                            android:text="@string/days_21"
                            android:textColor="#FFF"
                            android:textSize="25dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5.0dp"
                            android:text="Daily 1 hour"
                            android:textColor="#FFF"
                            android:textSize="20dp" />
                    </LinearLayout>
                </LinearLayout>


                <Button
                    android:id="@+id/handlesbutton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10.0dp"
                    android:background="@drawable/btback"
                    android:text="@string/start_now"
                    android:textColor="#FFF" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/backgcrop"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:onClick="shooting"
                    android:layout_width="fill_parent"
                    android:layout_height="200.0dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="monospace"
                            android:padding="5.0dp"
                            android:text="@string/shooting"
                            android:textColor="#FFF"
                            android:textSize="42sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:padding="5.0dp"
                            android:text="@string/daily"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="#FFF"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5.0dp"
                            android:text="@string/_2_hours"
                            android:textSize="20sp"
                            android:textColor="#FFF"
                            />
                    </LinearLayout>
                </LinearLayout>


                <Button
                    android:id="@+id/shootingbutton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10.0dp"
                    android:background="@drawable/btback"
                    android:text="@string/start_now"
                    android:textColor="#FFF"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/backgcrop"
                android:orientation="vertical"
                >



                <LinearLayout
                    android:onClick="passing"
                    android:layout_width="fill_parent"
                    android:layout_height="200.0dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="monospace"
                            android:padding="5.0dp"
                            android:text="@string/passing"
                            android:textColor="#FFF"
                            android:textSize="42sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:padding="5.0dp"
                            android:text="@string/daily"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="#FFF"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5.0dp"
                            android:text="@string/_2_hours"
                            android:textSize="20sp"
                            android:textColor="#FFF"
                            />
                    </LinearLayout>
                </LinearLayout>


                <Button
                    android:id="@+id/passingbutton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10.0dp"
                    android:background="@drawable/btback"
                    android:text="@string/start_now"
                    android:textColor="#FFF"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/backgcrop"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:onClick="fitness"
                    android:layout_width="fill_parent"
                    android:layout_height="200.0dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="monospace"
                            android:padding="5.0dp"
                            android:text="FITNESS"
                            android:textColor="#FFF"
                            android:textSize="42sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:padding="5.0dp"
                            android:text="@string/daily"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            android:textColor="#FFF"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5.0dp"
                            android:text="1hr 30mins"
                            android:textSize="20sp"
                            android:textColor="#FFF"
                            />
                    </LinearLayout>
                </LinearLayout>


                <Button
                    android:id="@+id/fitnessbutton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10.0dp"
                    android:background="@drawable/btback"
                    android:text="@string/start_now"
                    android:textColor="#FFF"/>
            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>